[FIX] overlapping menues

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -19,7 +19,7 @@
     height: 100%;
     overflow: hidden;
     border: 0;
-    z-index: 80;
+    z-index: 1;
     position: absolute;
 }
 
@@ -42,14 +42,14 @@
     display: none;
     justify-content: center; /* center horizontally */
     align-items: center; /* center vertically */
-    z-index: 100;
+    z-index: 2;
     position: absolute;
     background-color: #e6e6e6;
 }
 
 .sr-external-page-content-info {
     margin-bottom: 12px;
-    z-index: 90;
+    z-index: 3;
 }
 
 button.sr-external-page-content-loader, button.sr-external-page-content-closer {
